# my_ros2_project

./: .gitignore  README.md
src/gae_msgs/: .gitignore  CMakeLists.txt  package.xml
src/gae_msgs/msg/: GaeBottomPoints.msg  GaeBottomPointsArray.msg  GaeCamDetection.msg  GaeCamDetectionArray.msg  GaeCamShellDetection.msg  GaeControlCmd.msg  GaePathIds.msg  GaeShellPolygon.msg  GaeTelemetry.msg
src/gae_shell_yolo/: ağırlıknotlar.txt  data.yaml  drivearea.py  (+4 more)
src/gae_sim/parkour_pkg/: CMakeLists.txt  package.xml
src/gae_sim/parkour_pkg/launch/: track_temp.launch.py
src/gae_sim/parkour_pkg/models/dur_levhasi/: model.sdf
src/gae_sim/parkour_pkg/models/dur_levhasi/meshes/: dur_levhasi.mtl
src/gae_sim/parkour_pkg/models/google_map/: model.config  model.sdf
src/gae_sim/parkour_pkg/models/google_map/materials/scripts/: map.material
src/gae_sim/parkour_pkg/models/gri_engel/: model.sdf
src/gae_sim/parkour_pkg/models/gri_engel/meshes/: gri_engel.mtl
src/gae_sim/parkour_pkg/models/mavi_duba/: model.sdf
src/gae_sim/parkour_pkg/models/mavi_duba/meshes/: mavi_duba.mtl
src/gae_sim/parkour_pkg/models/park_yeri/: model.config  model.sdf
src/gae_sim/parkour_pkg/models/park_yeri/meshes/: park_yeri.mtl
src/gae_sim/parkour_pkg/models/sari_cizgi/: model.sdf
src/gae_sim/parkour_pkg/models/sari_cizgi/meshes/: sari_cizgi.mtl
src/gae_sim/parkour_pkg/models/sari_duba/: model.config  model.sdf
src/gae_sim/parkour_pkg/models/sari_duba/meshes/: sari_duba.mtl
src/gae_sim/parkour_pkg/models/tam_yol_arkaplan/: model.config  model.sdf
src/gae_sim/parkour_pkg/models/tam_yol_arkaplan/meshes/: tam_yol_arkaplan.dae
src/gae_sim/parkour_pkg/models/tam_yol_seritli/: model.config  model.sdf
src/gae_sim/parkour_pkg/models/turuncu_cizgi/: model.sdf
src/gae_sim/parkour_pkg/models/turuncu_cizgi/meshes/: turuncu_cizgi.mtl
src/gae_sim/parkour_pkg/models/yol/: model.sdf
src/gae_sim/parkour_pkg/models/yol/meshes/: yol_mid.dae
src/gae_sim/parkour_pkg/models/yol_tam_serit/: model.config  model.sdf
src/gae_sim/parkour_pkg/worlds/: track_temp.world
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/: CMakeLists.txt  package.xml
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/include/gae_sim_gazebo/: GaeSimInterfacePlugin.hpp
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/launch/: gae_sim.launch.py  rviz2_sensor.launch.py  shell.launch.py
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/models/: README.md
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/models/dur_levhasi/: model.config  model.sdf
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/models/gri_engel/: model.config  model.sdf
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/models/mavi_duba/: model.config  model.sdf
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/models/model_files/: model.config
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/models/no_left_turn_sign/: model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/models/no_right_turn_sign/: model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/models/park_yeri/: model.sdf
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/models/sari_cizgi/: model.config  model.sdf
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/models/sari_duba/: model.sdf
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/models/teknofest_ground/: model.config  model.sdf
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/models/turn_right_ahead_sign/: model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/models/turuncu_cizgi/: model.config  model.sdf
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/models/two_way_road_sign/: model.config  model.sdf
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/models/yol/: model.config  model.sdf
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/rviz/: sensor_config.rviz
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/src/: GaeSimInterfacePlugin.cpp  GazeboTrafficLight.cpp
src/gae_sim/simulation/gae_sim/gae_sim_gazebo/worlds/: teknofest.world  track.world
src/gae_sim/simulation/gae_sim/gae_vehicle_description/: CMakeLists.txt  package.xml
src/gae_sim/simulation/gae_sim/gae_vehicle_description/meshes/: wheel.dae
src/gae_sim/simulation/gae_sim/gae_vehicle_description/src/: gps_heading_node.cpp  teleop_node.py
src/gae_sim/simulation/gae_sim/gae_vehicle_description/urdf/: gae_vehicle.urdf.xacro  zed2.xacro
src/multi_sensor_fusion_localization/src/gae_initial_pose_adaptor/: CMakeLists.txt  package.xml
src/multi_sensor_fusion_localization/src/gae_initial_pose_adaptor/src/: gae_pose_initializer_node.cpp
src/multi_sensor_fusion_localization/src/gnss_poser/: CMakeLists.txt  package.xml
src/multi_sensor_fusion_localization/src/gnss_poser/config/: gnss_poser.param.yaml
src/multi_sensor_fusion_localization/src/gnss_poser/include/gnss_poser/: gnss_poser_core.hpp
src/multi_sensor_fusion_localization/src/gnss_poser/launch/: gnss_poser.launch.py
src/multi_sensor_fusion_localization/src/gnss_poser/src/: gnss_poser_core.cpp
src/perception-lidar/travel_object_clustering/: CMakeLists.txt  package.xml
src/perception-lidar/travel_object_clustering/config/: object_clustering.param.yaml
src/perception-lidar/travel_object_clustering/include/object_clustering/: travel_object_clustering_nodelet.hpp
src/perception-lidar/travel_object_clustering/src/: travel_object_clustering_nodelet.cpp
src/planner/: .gitmodules  CMakeLists.txt  README.md  package.xml
src/planner/config/: PARAMETERS.md  config.yaml
src/planner/docs/: controller.md  global_planner.md  mission_planner.md  occupancy_grid.md  trajectory_planner.md
src/planner/include/planner/: controller.hpp  controller.hpp.old  global_planner.hpp  mission_planner.hpp  occupancy_grid.hpp  state_machine.hpp  trajectory_planner.hpp  utils.hpp
src/planner/launch/: planner_composable_launch.launch.py
src/planner/src/: controller.cpp  controller.cpp.old  fibonacci.cpp  global_planner.cpp  mission_planner.cpp  occupancy_grid.cpp  state_machine.cpp  trajectory_planner.cpp
(+277 files in other folders)
