cmake_minimum_required(VERSION 3.5)
project(gae_msgs)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/GaeControlCmd.msg"
  "msg/GaeTelemetry.msg"
  "msg/GaeCamDetection.msg"
  "msg/GaeCamDetectionArray.msg"
  "msg/GaeBottomPoints.msg"
  "msg/GaeBottomPointsArray.msg"
  "msg/GaePathIds.msg"
  "msg/GaeCamShellDetection.msg"
  "msg/GaeShellPolygon.msg"
  DEPENDENCIES std_msgs geometry_msgs 
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
