<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gnss_poser</name>
  <version>1.0.0</version>
  <description>The ROS 2 gnss_poser package uses 2 gnss antenna to obtain the pose of ego vehicle</description>
  <maintainer email="demirme22@itu.edu.tr">Your Name</maintainer>
  <license>Apache License 2.0</license>
  <url type="https://www.itusct.com/">Website</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <build_depend>libboost-dev</build_depend>


  <depend>component_interface_specs</depend>  
  <depend>component_interface_utils</depend>
  <depend>geographic_msgs</depend>
  <depend>geographiclib</depend>
  <depend>geography_utils</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend>


  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
