<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gae_sim_gazebo</name>
  <version>0.0.0</version>
  <description>Gae Sim Gazebo Plugin</description>
  <maintainer email="ozkanumut57@gmail.com">umut</maintainer>
  <license>BSD</license>

  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros_control</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>gae_msgs</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gae_vehicle_description</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
